test/logs.txt
In file included from ../set_tests/iterators.cpp:1:
In file included from ../set_tests/../system/system_methods.ipp:2:
In file included from ../set_tests/../system/lib.hpp:30:
../set_tests/../system/Alloc.hpp:55:27: error: variadic templates are a C++11 extension [-Werror,-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../set_tests/../system/Alloc.hpp:58:34: error: rvalue references are a C++11 extension [-Werror,-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../set_tests/../system/Alloc.hpp:164:27: error: variadic templates are a C++11 extension [-Werror,-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../set_tests/../system/Alloc.hpp:167:34: error: rvalue references are a C++11 extension [-Werror,-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
4 errors generated.
ated.
